--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ features = [
     "Foundation_Collections",
     "Graphics_Capture",
     "Win32_Foundation",
+    "Win32_Graphics_Direct3D",
+    "Win32_Graphics_Direct3D11",
+    "Win32_Graphics_Dxgi",
     "Win32_Graphics_Dwm",
     "Win32_System_Com",
     "Win32_System_WinRT",
