--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ features = [
     "Win32_Graphics_Dwm",
     "Win32_System_Com",
     "Win32_System_WinRT",
+    "Win32_System_WinRT_Direct3D11",
     "Win32_System_WinRT_Graphics_Capture",
     "Win32_UI_WindowsAndMessaging",
 ]
