--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ features = [
     "alloc",
     "Foundation_Collections",
     "Graphics_Capture",
+    "Graphics_DirectX",
+    "Graphics_DirectX_Direct3D11",
     "Win32_Foundation",
     "Win32_Graphics_Direct3D",
     "Win32_Graphics_Direct3D11",
