--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,12 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[patch.crates-io]
+ari = { git = "https://github.com/discord/ari", branch = "remove-nightly-features" }
+
+[dependencies]
+ari = "0.0.5"
+lazy_static = "1"
 [dependencies.windows]
 version = "0.35.0"
 features = [
@@ -21,7 +27,6 @@ features = [
     "Win32_Graphics_Dxgi",
     "Win32_Graphics_Dwm",
     "Win32_System_Com",
-    "Win32_System_WinRT",
     "Win32_System_WinRT_Direct3D11",
     "Win32_System_WinRT_Graphics_Capture",
     "Win32_UI_WindowsAndMessaging",
